# RhythmGame

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  ATTRIBUTIONS.md  AbstractBasicAnimation_8cpp.html  AbstractBasicAnimation_8h.html  AbstractBox_8cpp.html  AbstractBox_8h.html  AbstractRectLeaf_8cpp.html  AbstractRectLeaf_8h.html  AbstractVectorCollection_8cpp.html  AbstractVectorCollection_8h.html  Actor_8cpp.html  Actor_8h.html  Align_8cpp.html  Align_8h.html  AnimationPlayerImpl_8cpp.html  AnimationPlayerImpl_8h.html  AnimationPlayer_8cpp.html  AnimationPlayer_8h.html  AnimationSequence_8cpp.html  AnimationSequence_8h.html  Animation_8cpp.html  Animation_8h.html  AssetsFolderFinder_8cpp.html  AssetsFolderFinder_8h.html  AudioEngine_8cpp.html  AudioEngine_8cpp__incl.map  AudioEngine_8cpp__incl.md5  AudioEngine_8h.html  AudioEngine_8h__dep__incl.map  AudioEngine_8h__dep__incl.md5  AudioEngine_8h__incl.map  AudioEngine_8h__incl.md5  AudioEngine_8h_source.html  AudioPlayer_8cpp.html  AudioPlayer_8cpp__incl.map  AudioPlayer_8cpp__incl.md5  AudioPlayer_8h.html  (+3718 more)
.github/: clang-12.profile  clang-13.profile  clang-14.profile  macos.profile  ubuntu.profile  windows.profile
RhythmGameQml/: CMakeLists.txt  ChartData.cpp  ChartData.h  ChartList.cpp  ChartList.h  ChartLoader.cpp  ChartLoader.h  ColorChanger.frag  ColorChanger.qml  ContentFrame.qml  Folder.cpp  Folder.h  Log.qml  Logger.cpp  Logger.h  Lr2ActiveOptionCache.js  Lr2AnimationFrameState.cpp  Lr2AnimationFrameState.h  Lr2BarBaseStateCache.cpp  Lr2BarBaseStateCache.h  Lr2BarBaseStateResolver.cpp  Lr2BarBaseStateResolver.h  Lr2BarDistributionGraphItem.cpp  Lr2BarDistributionGraphItem.h  Lr2BarDistributionGraphRenderer.qml  Lr2BarGraphRenderer.qml  Lr2BarInterpolatedState.cpp  Lr2BarInterpolatedState.h  Lr2BarNumberRenderer.qml  Lr2BarPositionCache.cpp  Lr2BarPositionCache.h  Lr2BarPositionMap.cpp  Lr2BarPositionMap.h  Lr2BarPositionedItem.cpp  Lr2BarPositionedItem.h  Lr2BarSpriteRenderer.qml  Lr2BarTextItem.cpp  Lr2BarTextItem.h  Lr2BarTextRenderer.qml  Lr2BgaRenderer.qml  (+99 more)
RhythmGameQml/Lr2/: Lr2AddBlend.frag  Lr2AnimationFrameState.cpp  Lr2AnimationFrameState.h  Lr2BarBaseStateResolver.cpp  Lr2BarBaseStateResolver.h  Lr2BarDistributionGraph.frag  Lr2BarDistributionGraph.vert  Lr2BarDistributionGraphItem.cpp  Lr2BarDistributionGraphRenderer.qml  Lr2BarGraphRenderer.qml  Lr2BarInterpolatedState.cpp  Lr2BarInterpolatedState.h  Lr2BarNumberRenderer.qml  Lr2BarPositionMap.cpp  Lr2BarPositionMap.h  Lr2BarPositionedItem.cpp  Lr2BarPositionedItem.h  Lr2BarSpriteRenderer.qml  Lr2BarTextItem.cpp  Lr2BarTextItem.h  Lr2BarTextRenderer.qml  Lr2BgaRenderer.qml  Lr2BitmapFontText.qml  Lr2BitmapFontTexture.cpp  Lr2BitmapFontTexture.h  Lr2BpmChartRenderer.qml  Lr2ChartDataSnapshot.cpp  Lr2ChartDataSnapshot.h  Lr2FastSprite.qml  Lr2GameplayFrameState.cpp  Lr2GameplayFrameState.h  Lr2GrooveGaugeRenderer.qml  Lr2NoteChartRenderer.qml  Lr2NumberRenderer.qml  Lr2OptionState.qml  Lr2PlayContext.qml  Lr2PlayNoteField.qml  Lr2RankingState.qml  Lr2ReadmePointerArea.qml  Lr2ReadmeState.qml  (+77 more)
src/charts/: Base62.cpp  Base62.h  BmsNotesData.cpp  BmsNotesData.h  CMakeLists.txt  ParsedBmsChart.cpp  ParsedBmsChart.h  ReadBmsFile.cpp  ReadBmsFile.h  Snap.h
src/charts/behaviour/: SongDataWriter.cpp  SongDataWriter.h  SongDataWriterToLua.cpp  SongDataWriterToLua.h
src/charts/chart_readers/: BmsChartReader.cpp  BmsChartReader.h  ToChars.h
src/charts/chart_readers/bms/: BmsChartReader.cpp  BmsChartReader.h
src/charts/gameplay_models/: BmsChart.cpp  BmsChart.h  BmsNotesData.cpp  BmsNotesData.h  Snap.cpp  Snap.h
src/charts/helper_functions/: loadBmsSounds.cpp  loadBmsSounds.h
src/charts/models/: BmsChart.cpp  BmsChart.h  BmsMeta.cpp  BmsMeta.h  Chart.cpp  Chart.h  ChartInfo.cpp  ChartInfo.h  MetadataTypes.h
src/charts/models/bms/: BmsChart.cpp  BmsChart.h
src/charts/parser_models/: ParsedBmsChart.cpp  ParsedBmsChart.h
src/tgaplugin/: CMakeLists.txt  TgaHandler.cpp  TgaHandler.h  TgaPlugin.cpp  TgaPlugin.h  tga.json
test/: BmsChartReader.test.cpp  CMakeLists.txt  RhythmGame_test.cpp  SplashScreen.test.cpp  findTestAssetsFolder.h  setupState.h
test/charts/: BmsChart.test.cpp  BmsChartReader.test.cpp
test/charts/behaviour/: SongDataWriter.test.cpp
test/charts/chart_readers/: BmsChartReader.test.cpp  ToChars.test.cpp
test/charts/gameplay_models/: BmsChart.test.cpp
test/charts/helper_functions/: loadBmsSounds.test.cpp
test/charts/models/: BmsChart.test.cpp
test/db/: SqliteCppDb.test.cpp
test/db/sqlite_cpp_db/: SqliteCppDb.test.cpp
test/drawing/: Actor.test.cpp  Align.test.cpp  Hbox.test.cpp  Padding.test.cpp  Parent.test.cpp  VBox.test.cpp  splashWindow.test.cpp
test/drawing/actors/: Actor.test.cpp  Align.test.cpp  Frame.test.cpp  Layers.test.cpp  VBox.test.cpp
test/drawing/animations/: Animation.test.cpp  AnimationPlayerImpl.test.cpp  AnimationSequence.test.cpp  Linear.test.cpp
test/events/: Event.test.cpp  GlobalEvent.test.cpp  MouseClickEvent.test.cpp  MouseHoverEvents.test.cpp  events.test.cpp
test/input/: InputTranslator.test.cpp
test/lr2_skin/: Lr2BarBaseStateCache.test.cpp  Lr2BarBaseStateResolver.test.cpp  Lr2ResolvedTextRegistry.test.cpp  Lr2SelectBarModel.test.cpp  Lr2SelectDetailState.test.cpp  Lr2SelectStateCache.test.cpp  Lr2SkinParser.test.cpp  Lr2SkinRuntimeTypes.test.cpp
test/lua/: LuaAlign.test.cpp  LuaAnimation.test.cpp  LuaAnimationSequence.cpp  LuaFrame.cpp  LuaFrame.test.cpp  LuaHBox.test.cpp  LuaLayers.test.cpp  LuaLinear.test.cpp  LuaPadding.test.cpp  LuaQuad.test.cpp  LuaSound.cpp  LuaSound.test.cpp  LuaSprite.cpp  LuaSprite.test.cpp  LuaText.test.cpp  LuaVBox.test.cpp  setupState.h
test/qml_components/: FileQuery.test.cpp
test/resource_managers/: Lr2FontCache.test.cpp  LuaScriptFinder.test.cpp  QmlScriptFinder.test.cpp  ScanThemes.test.cpp  loadBmsSounds.test.cpp
test/sounds/: OpenAlSound.test.cpp
test/source/: RhythmGame_test.cpp
test/state_transitions/: Game.test.cpp  state_transitions.test.cpp
test/support/: GeneratePermutation.test.cpp
test/wiring/: Injector.test.cpp
(+1040 files in other folders)
